--- a/pythonbasics.ipynb/functions.ipynb
+++ b/pythonbasics.ipynb/functions.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,19 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object of type 'int' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mavg\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[18], line 2\u001b[0m, in \u001b[0;36mavg\u001b[1;34m(num1, num2, num3)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mavg\u001b[39m(num1,num2,num3):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(num1\u001b[38;5;241m+\u001b[39mnum2\u001b[38;5;241m+\u001b[39mnum3\u001b[38;5;241m/\u001b[39m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnum1\u001b[49m\u001b[43m)\u001b[49m,\u001b[38;5;28mlen\u001b[39m(num2),\u001b[38;5;28mlen\u001b[39m(num3))\n",
-      "\u001b[1;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
      ]
     }
    ],
@@ -160,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get a random number between 0 and 1:  0.31550321131688497\n",
-      "get a random number between 1 and 100:  67\n",
-      "get a random number from a list :  3\n",
+      "get a random number between 0 and 1:  0.13377953708193102\n",
+      "get a random number between 1 and 100:  71\n",
+      "get a random number from a list :  1\n",
       "shuffle a list: ['apoorva,kavya,ayushi,divya']\n"
      ]
     }
@@ -294,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,15 +300,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current date and time : 2024-12-21 18:31:51.568881\n",
-      "current date : 2024-12-21\n"
+      "current date and time : 2025-03-04 23:28:14.927622\n",
+      "current date : 2025-03-04\n"
      ]
     },
     {
@@ -323,7 +318,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent date and time :\u001b[39m\u001b[38;5;124m'\u001b[39m,dt\u001b[38;5;241m.\u001b[39mnow())\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent date :\u001b[39m\u001b[38;5;124m'\u001b[39m,dt\u001b[38;5;241m.\u001b[39mnow()\u001b[38;5;241m.\u001b[39mdate())\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent time :\u001b[39m\u001b[38;5;124m'\u001b[39m,dt\u001b[38;5;241m.\u001b[39mnow(),\u001b[43mdt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtime\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent year: \u001b[39m\u001b[38;5;124m'\u001b[39m,dt\u001b[38;5;241m.\u001b[39mnow(),dt\u001b[38;5;241m.\u001b[39myear())\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent month:\u001b[39m\u001b[38;5;124m'\u001b[39m,dt\u001b[38;5;241m.\u001b[39mnow(),dt\u001b[38;5;241m.\u001b[39mmonth())\n",
+      "Cell \u001b[1;32mIn[18], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent date and time :\u001b[39m\u001b[38;5;124m'\u001b[39m,dt\u001b[38;5;241m.\u001b[39mnow())\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent date :\u001b[39m\u001b[38;5;124m'\u001b[39m,dt\u001b[38;5;241m.\u001b[39mnow()\u001b[38;5;241m.\u001b[39mdate())\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent time :\u001b[39m\u001b[38;5;124m'\u001b[39m,dt\u001b[38;5;241m.\u001b[39mnow(),\u001b[43mdt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtime\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent year: \u001b[39m\u001b[38;5;124m'\u001b[39m,dt\u001b[38;5;241m.\u001b[39mnow(),dt\u001b[38;5;241m.\u001b[39myear())\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent month:\u001b[39m\u001b[38;5;124m'\u001b[39m,dt\u001b[38;5;241m.\u001b[39mnow(),dt\u001b[38;5;241m.\u001b[39mmonth())\n",
       "\u001b[1;31mTypeError\u001b[0m: unbound method datetime.time() needs an argument"
      ]
     }
@@ -344,14 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "date in dd-mm-yyyy format : 21-12-24\n"
+      "date in dd-mm-yyyy format : 04-03-25\n"
      ]
     }
    ],
@@ -362,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time in 24 hour format: 18:41:53\n"
+      "time in 24 hour format: 23:29:27\n"
      ]
     }
    ],
@@ -380,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,28 +389,35 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "current working directory: c:\\Users\\Acer\\Desktop\\python programs\\pythonbasics.ipynb\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurrent working directory:\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mgetcwd())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
      ]
     }
    ],
    "source": [
-    "print('current working directory:',os.getcwd())"
+    "print('current working directory:',os.getcwd())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[files in current directory]\n",
-      "3 files found\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m files \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mlistdir()\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[files in current directory]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(files),\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfiles found\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
      ]
     }
    ],
@@ -429,18 +431,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<generator object walk at 0x0000020854200D30>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mwalk(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m##module\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
     }
    ],
    "source": [
@@ -458,6 +461,325 @@
     "total_files =0 \n",
     "for path,folders,files in os.walk():\n",
     "    total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "user defined function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is apoorva\n"
+     ]
+    }
+   ],
+   "source": [
+    "def apoorva():\n",
+    "    print(\"my name is apoorva\")\n",
+    "apoorva()    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello class\n",
+      "we are learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function():\n",
+    "    print(\"hello class\")\n",
+    "    print(\"we are learning\")\n",
+    "my_function()    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def contact():\n",
+    "    print(\"contact details of school\")\n",
+    "    print(\"delhi public school\")\n",
+    "    print(\"banglore karnataka\")\n",
+    "    print(\"7897558318\")\n",
+    "    print(\"apoorvaasthana48@gamil.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "student name: apoorva\n",
+      "marks-maths: 89 hindi: 90 geography: 90\n",
+      "contact details of school\n",
+      "delhi public school\n",
+      "banglore karnataka\n",
+      "7897558318\n",
+      "apoorvaasthana48@gamil.com\n",
+      "\n",
+      "student name: apoorva\n",
+      "marks-maths: 90 hindi: 90 geography: 90\n",
+      "contact details of school\n",
+      "delhi public school\n",
+      "banglore karnataka\n",
+      "7897558318\n",
+      "apoorvaasthana48@gamil.com\n",
+      "\n",
+      "student name: aryan \n",
+      "marks-maths: 78 hindi: 78 geography: 78\n",
+      "contact details of school\n",
+      "delhi public school\n",
+      "banglore karnataka\n",
+      "7897558318\n",
+      "apoorvaasthana48@gamil.com\n",
+      "\n",
+      "student name: beena\n",
+      "marks-maths: 78 hindi: 78 geography: 78\n",
+      "contact details of school\n",
+      "delhi public school\n",
+      "banglore karnataka\n",
+      "7897558318\n",
+      "apoorvaasthana48@gamil.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    a=input(\"name of student\")\n",
+    "    b=int(input(\"enter marks of maths\"))\n",
+    "    c=int(input(\"enter marks of hindi\"))\n",
+    "    d=int(input(\"enter marks of geography\"))\n",
+    "    print(\"\\nstudent name:\",a)\n",
+    "    print(\"marks-maths:\",b,\"hindi:\",c,\"geography:\",d)\n",
+    "    contact()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "arguments means information ko pass krna\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_function(fname,lname):\n",
+    "    print(fname+\" \"+lname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apoorva asthana\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_function(\"apoorva\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "divya asthana\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_function(\"divya\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apoorva asthana\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_function(\"apoorva\",\"asthana\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum(a,b):\n",
+    "    print(a+b)\n",
+    "def sub(c,d):\n",
+    "    print(c-d)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum(9,78)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "sub(90,80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "electricity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def electricity_bill(n, user):\n",
+    "    if n<=500:\n",
+    "        print(f\"{user},your bill :,{n*5}\")\n",
+    "    elif n>500 and n<=700:\n",
+    "        print(f\"{user},your bill : ,{n*10}\")    \n",
+    "    elif n>700 and n<=1000:\n",
+    "        print(f\"{user},your bill:,{n*15}\")\n",
+    "    elif n>1000:\n",
+    "           print(f\"{user},your bill :,{n*20}\")     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aryan,your bill :,2250\n",
+      "beena,your bill : ,6000\n",
+      "apoorva,your bill:,13500\n"
+     ]
+    }
+   ],
+   "source": [
+    "for  i in range(3):\n",
+    "    user=input(\"enter user name: \")\n",
+    "    n=int(input(\"enter electricity used:\"))\n",
+    "    electricity_bill(n,user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apoorva, your bill: 2500\n",
+      "aryan, your bill: 13500\n",
+      "beena789, your bill: 12000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def electricity_bill(n, user):\n",
+    "    if n <= 500:\n",
+    "        print(f\"{user}, your bill: {n * 5}\")\n",
+    "    elif 500 < n <= 700:\n",
+    "        print(f\"{user}, your bill: {n * 10}\")\n",
+    "    elif 700 < n <= 1000:\n",
+    "        print(f\"{user}, your bill: {n * 15}\")\n",
+    "    elif n > 1000:\n",
+    "        print(f\"{user}, your bill: {n * 20}\")\n",
+    "\n",
+    "for i in range(3):\n",
+    "    user = input(\"Enter the name of user: \")\n",
+    "    n = int(input(\"Enter the unit of electricity used: \"))\n",
+    "    electricity_bill(n,\n",
+    "                     user)"
    ]
   }
  ],
