--- a/pythonbasics.ipynb/loopsprct.ipynb
+++ b/pythonbasics.ipynb/loopsprct.ipynb
@@ -295,13 +295,283 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "concept of loops \n",
+    "while loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "n=5\n",
+    "while i<=5:\n",
+    "    print(i)\n",
+    "    i=i+1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98\n",
+      "196\n",
+      "294\n",
+      "392\n",
+      "490\n",
+      "588\n",
+      "686\n",
+      "784\n",
+      "882\n",
+      "980\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input(\"enter number\"))\n",
+    "i=1\n",
+    "while i<=10:\n",
+    "    m=n*i\n",
+    "    i=i+1\n",
+    "    print(m)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87\n",
+      "174\n",
+      "261\n",
+      "348\n",
+      "435\n",
+      "522\n",
+      "609\n",
+      "696\n",
+      "783\n",
+      "870\n",
+      "this is the multiplication table\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input(\"enter number\"))\n",
+    "i=1\n",
+    "while i<=10:\n",
+    "    print(n*i)\n",
+    "    i=i+1\n",
+    "print(\"this is the multiplication table\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n"
+     ]
+    }
+   ],
+   "source": [
+    "count=0\n",
+    "while count<=16:\n",
+    "    print(\"hello students\")\n",
+    "    count=count+1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "using else statement im the while loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "hello students\n",
+      "this is else block\n"
+     ]
+    }
+   ],
+   "source": [
+    "count=0\n",
+    "while count<=16:\n",
+    "    print(\"hello students\")\n",
+    "    count=count+1\n",
+    "else:\n",
+    "    print(\"this is else block\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits=[\"apple\",\"banana\",\"cherry\"]\n",
+    "for x in fruits:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "looping through a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "a\n",
+      "n\n",
+      "a\n",
+      "n\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in \"banana\":\n",
+    "    print(x) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(25):\n",
+    "    print(x)\n",
+    "    ## range fun n-1 tk chalta h"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "fruits=['apple']"
-   ]
+   "source": []
   }
  ],
  "metadata": {
